--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ etc/bash_completion.d
 # In case DOTSOFTWARE_TMP_DIR is set as DOTSOFTWARE_ROOT_DIR
 build/
 
+# Needed if OpenSSL is installed
+ssl/
